src/System/Win32/Console/Console2.hsc


  poke p x = #{poke CONSOLE_SCREEN_BUFFER_INFOEX, cbSize} p (sizeOf x)
          *> #{poke CONSOLE_SCREEN_BUFFER_INFOEX, dwSize} p (csbiexSize x)
          *> #{poke CONSOLE_SCREEN_BUFFER_INFOEX, dwCursorPosition} p (csbiexCursorPosition x) 
          *> #{poke CONSOLE_SCREEN_BUFFER_INFOEX, wAttributes} p (csbiexAttributes x) 
          *> #{poke CONSOLE_SCREEN_BUFFER_INFOEX, srWindow} p (csbiexWindow x) 
          *> #{poke CONSOLE_SCREEN_BUFFER_INFOEX, dwMaximumWindowSize} p (csbiexMaximumWindowSize x) 
          *> #{poke CONSOLE_SCREEN_BUFFER_INFOEX, wPopupAttributes} p (csbiexPopupAttributes x) 
          *> #{poke CONSOLE_SCREEN_BUFFER_INFOEX, bFullscreenSupported} p (csbiexFullscreenSupported x) 
          *> pokeArray (#{ptr CONSOLE_SCREEN_BUFFER_INFOEX, ColorTable} p) (csbiexColorTable x) 

foreign import ccall "windows.h GetConsoleScreenBufferInfoEx" c_GetConsoleScreenBufferInfoEx :: HANDLE -> PCONSOLE_SCREEN_BUFFER_INFOEX -> IO BOOL

getConsoleScreenBufferInfoEx :: HANDLE -> IO CONSOLE_SCREEN_BUFFER_INFOEX
getConsoleScreenBufferInfoEx h =
    alloca $ \pConsoleScreenBufferInfo -> do
    failIfFalse_ "GetConsoleScreenBufferInfoEx" $ c_GetConsoleScreenBufferInfoEx h pConsoleScreenBufferInfo
    peek pConsoleScreenBufferInfo

{- 
WINBASEAPI
BOOL
WINAPI
SetConsoleScreenBufferInfoEx(
    _In_ HANDLE hConsoleOutput,
    _In_ PCONSOLE_SCREEN_BUFFER_INFOEX lpConsoleScreenBufferInfoEx
    );
 -}
foreign import ccall "windows.h SetConsoleScreenBufferInfoEx" c_SetConsoleScreenBufferInfoEx :: HANDLE -> PCONSOLE_SCREEN_BUFFER_INFOEX -> IO BOOL

setConsoleScreenBufferInfoEx :: HANDLE -> CONSOLE_SCREEN_BUFFER_INFOEX -> IO ()
setConsoleScreenBufferInfoEx h consoleScreenBufferInfo =
    alloca $ \pConsoleScreenBufferInfo -> do
    poke pConsoleScreenBufferInfo consoleScreenBufferInfo
    failIfFalse_ "SetConsoleScreenBufferInfoEx" $ c_SetConsoleScreenBufferInfoEx h pConsoleScreenBufferInfo

{- 
WINBASEAPI
BOOL
WINAPI
SetConsoleScreenBufferSize(
    _In_ HANDLE hConsoleOutput,
    _In_ COORD dwSize
    );
 -}
foreign import ccall "windows.h SetConsoleScreenBufferSize" c_SetConsoleScreenBufferSize :: HANDLE -> {- COORD -} DWORD -> IO BOOL

setConsoleScreenBufferBufferSize :: HANDLE -> COORD -> IO ()
setConsoleScreenBufferBufferSize h size =
    failIfFalse_ "SetConsoleScreenBufferSize" $ c_SetConsoleScreenBufferSize h (coordToDWord size)


{- 
WINBASEAPI
BOOL
WINAPI
SetConsoleCursorPosition(
    _In_ HANDLE hConsoleOutput,
    _In_ COORD dwCursorPosition
    );
 -}
foreign import ccall "windows.h SetConsoleCursorPosition" c_SetConsoleCursorPosition :: HANDLE -> {- COORD -} DWORD -> IO BOOL

setConsoleCursorPosition :: HANDLE -> COORD -> IO ()
setConsoleCursorPosition h p = failIfFalse_ "SetConsoleCursorPositionW" $ c_SetConsoleCursorPosition h (coordToDWord p)

{- 
WINBASEAPI
COORD
WINAPI
GetLargestConsoleWindowSize(
    _In_ HANDLE hConsoleOutput
    );
 -}
foreign import ccall "windows.h GetLargestConsoleWindowSize" c_GetLargestConsoleWindowSize :: HANDLE -> IO  {- COORD -} DWORD

getLargestConsoleWindowSize :: HANDLE -> IO COORD
getLargestConsoleWindowSize x = dwordToCoord <$> failIf (== 0) "GetLargestConsoleWindowSize" (c_GetLargestConsoleWindowSize x)

{- 
WINBASEAPI
BOOL
WINAPI
SetConsoleTextAttribute(
    _In_ HANDLE hConsoleOutput,
    _In_ WORD wAttributes
    );
 -}
foreign import ccall "windows.h SetConsoleTextAttribute" c_SetConsoleTextAttribute :: HANDLE -> AttributeFlags -> IO BOOL

setConsoleTextAttribute :: HANDLE -> AttributeFlags -> IO ()
setConsoleTextAttribute h a = failIfFalse_ "SetConsoleTextAttribute" $ c_SetConsoleTextAttribute h a

{- 
WINBASEAPI
BOOL
WINAPI
SetConsoleWindowInfo(
    _In_ HANDLE hConsoleOutput,
    _In_ BOOL bAbsolute,
    _In_ CONST SMALL_RECT* lpConsoleWindow
    );
 -}
foreign import ccall "windows.h SetConsoleWindowInfo" c_SetConsoleWindowInfo :: HANDLE -> BOOL -> Ptr SMALL_RECT -> IO BOOL

setConsoleWindowInfo :: HANDLE -> BOOL -> SMALL_RECT -> IO ()
setConsoleWindowInfo h a sr =
    alloca $ \pSr -> do
    poke pSr sr
    failIfFalse_ "SetConsoleWindowInfo" $ c_SetConsoleWindowInfo h a pSr

{- 
WINBASEAPI
BOOL
WINAPI
WriteConsoleOutputCharacterW(
    _In_ HANDLE hConsoleOutput,
    _In_reads_(nLength) LPCWSTR lpCharacter,
    _In_ DWORD nLength,
    _In_ COORD dwWriteCoord,
    _Out_ LPDWORD lpNumberOfCharsWritten
    );
 -}
foreign import ccall "windows.h WriteConsoleOutputCharacterW" c_WriteConsoleOutputCharacterW :: HANDLE -> LPCWSTR -> DWORD -> {- COORD -} DWORD -> LPDWORD -> IO BOOL

writeConsoleOutputCharacter :: HANDLE -> WinString -> COORD -> IO DWORD
writeConsoleOutputCharacter h chars p =
    alloca $ \pCharsWritten ->
    withVectorPtr chars $ \ptr len -> do
    failIfFalse_ "WriteConsoleOutputCharacterW" $ c_WriteConsoleOutputCharacterW h ptr (fromIntegral len) (coordToDWord p) pCharsWritten
    peek pCharsWritten

{- 
WINBASEAPI
BOOL
WINAPI
WriteConsoleOutputAttribute(
    _In_ HANDLE hConsoleOutput,
    _In_reads_(nLength) CONST WORD* lpAttribute,
    _In_ DWORD nLength,
    _In_ COORD dwWriteCoord,
    _Out_ LPDWORD lpNumberOfAttrsWritten
    );
 -}
foreign import ccall "windows.h WriteConsoleOutputAttribute" c_WriteConsoleOutputAttribute :: HANDLE -> Ptr AttributeFlags -> DWORD -> {- COORD -} DWORD -> LPDWORD -> IO BOOL

writeConsoleOutputAttribute :: HANDLE -> V.Vector AttributeFlags -> COORD -> IO DWORD
writeConsoleOutputAttribute h attrs p =
    alloca $ \pAttrsWritten ->
    withVectorPtr attrs $ \ptr len -> do
    failIfFalse_ "WriteConsoleOutputAttribute" $ c_WriteConsoleOutputAttribute h ptr (fromIntegral len) (coordToDWord p) pAttrsWritten
    peek pAttrsWritten

{- 
WINBASEAPI
BOOL
WINAPI
ReadConsoleOutputCharacterW(
    _In_ HANDLE hConsoleOutput,
    _Out_writes_(nLength) LPWSTR lpCharacter,
    _In_ DWORD nLength,
    _In_ COORD dwReadCoord,
    _Out_ LPDWORD lpNumberOfCharsRead
    );
 -}
foreign import ccall "windows.h ReadConsoleOutputCharacterW" c_ReadConsoleOutputCharacterW :: HANDLE -> LPWSTR -> DWORD -> {- COORD -} DWORD -> LPDWORD -> IO BOOL

readConsoleOutputCharacter :: HANDLE -> DWORD -> COORD -> IO WinString
readConsoleOutputCharacter h len pos =
  alloca $ \pReadChars -> do
  v <- newVectorWith (fromIntegral len) $ \p ->
    failIfFalse_ "ReadConsoleOutputCharacterW" $ c_ReadConsoleOutputCharacterW h p len (coordToDWord pos) pReadChars
  readChars <- peek pReadChars
  pure (V.take (fromIntegral readChars) v)

{- 
WINBASEAPI
BOOL
WINAPI
ReadConsoleOutputAttribute(
    _In_ HANDLE hConsoleOutput,
    _Out_writes_(nLength) LPWORD lpAttribute,
    _In_ DWORD nLength,
    _In_ COORD dwReadCoord,
    _Out_ LPDWORD lpNumberOfAttrsRead
    );
 -}
foreign import ccall "windows.h ReadConsoleOutputAttribute" c_ReadConsoleOutputAttribute :: HANDLE -> Ptr AttributeFlags -> DWORD -> {- COORD -} DWORD -> LPDWORD -> IO BOOL

readConsoleOutputAttribute :: HANDLE -> DWORD -> COORD -> IO (V.Vector AttributeFlags)
readConsoleOutputAttribute h len pos =
  alloca $ \pReadChars -> do
  v <- newVectorWith (fromIntegral len) $ \p ->
    failIfFalse_ "ReadConsoleOutputAttribute" $ c_ReadConsoleOutputAttribute h p len (coordToDWord pos) pReadChars
  readChars <- peek pReadChars
  pure (V.take (fromIntegral readChars) v)

{- 
WINBASEAPI
BOOL
WINAPI
WriteConsoleInputW(
    _In_ HANDLE hConsoleInput,
    _In_reads_(nLength) CONST INPUT_RECORD* lpBuffer,
    _In_ DWORD nLength,
    _Out_ LPDWORD lpNumberOfEventsWritten
    );
 -}
foreign import ccall "windows.h WriteConsoleInputW" c_WriteConsoleInputW :: HANDLE -> Ptr INPUT_RECORD -> DWORD -> LPDWORD -> IO BOOL

writeConsoleInput :: HANDLE -> V.Vector INPUT_RECORD -> IO DWORD
writeConsoleInput h v =
  alloca $ \pEventsWritten ->
  withVectorPtr v $ \p l -> do
  failIfFalse_ "WriteConsoleInputW" $ c_WriteConsoleInputW h p (fromIntegral l) pEventsWritten
  peek pEventsWritten

{- 
WINBASEAPI
BOOL
WINAPI
ScrollConsoleScreenBufferW(
    _In_ HANDLE hConsoleOutput,
    _In_ CONST SMALL_RECT* lpScrollRectangle,
    _In_opt_ CONST SMALL_RECT* lpClipRectangle,
    _In_ COORD dwDestinationOrigin,
    _In_ CONST CHAR_INFO* lpFill
    );
 -}
foreign import ccall "windows.h ScrollConsoleScreenBufferW" c_ScrollConsoleScreenBufferW :: HANDLE
                                                                                         -> Ptr SMALL_RECT
                                                                                         -> Ptr SMALL_RECT
                                                                                         -> {- COORD -} DWORD
                                                                                         -> Ptr CHAR_INFO
                                                                                         -> IO BOOL

scrollConsoleScreenBuffer :: HANDLE -> SMALL_RECT -> Maybe SMALL_RECT -> COORD -> CHAR_INFO -> IO ()
scrollConsoleScreenBuffer h scroll mclip dest fill =
  alloca $ \pScroll -> do
  poke pScroll scroll
  alloca $ \pFill -> do
    poke pFill fill
    case mclip of
     Nothing -> failIfFalse_ "ScrollConsoleScreenBufferW" $ c_ScrollConsoleScreenBufferW h pScroll nullPtr (coordToDWord dest) pFill
     Just clip -> alloca $ \pClip -> do
                  poke pClip clip
                  failIfFalse_ "ScrollConsoleScreenBufferW" $ c_ScrollConsoleScreenBufferW h pScroll pClip (coordToDWord dest) pFill

{- 
WINBASEAPI
BOOL
WINAPI
WriteConsoleOutputW(
    _In_ HANDLE hConsoleOutput,
    _In_reads_(dwBufferSize.X * dwBufferSize.Y) CONST CHAR_INFO* lpBuffer,
    _In_ COORD dwBufferSize,
    _In_ COORD dwBufferCoord,
    _Inout_ PSMALL_RECT lpWriteRegion
    );
 -}
foreign import ccall "windows.h WriteConsoleOutputW" c_WriteConsoleOutputW :: HANDLE
                                                                           -> Ptr CHAR_INFO
                                                                           -> {- COORD -} DWORD
                                                                           -> {- COORD -} DWORD
                                                                           -> PSMALL_RECT
                                                                           -> IO BOOL

-- writeConsoleOutput :: HANDLE -> V.Vector CHAR_INFO -> COORD -> COORD -> IO SMALL_RECT
-- writeConsoleOutput h v size pos =
--   alloca $ \pWriteRegion ->
--   withVectorPtr v $ \p l -> do
--   failIfFalse_ "WriteConsoleOutputW" $ c_WriteConsoleOutputW h p (coordToDWord size) (coordToDWord pos) pWriteRegion
--   peek pWriteRegion

-- {- 
-- WINBASEAPI
-- BOOL
-- WINAPI
-- ReadConsoleOutputW(
--     _In_ HANDLE hConsoleOutput,
--     _Out_writes_(dwBufferSize.X * dwBufferSize.Y) PCHAR_INFO lpBuffer,
--     _In_ COORD dwBufferSize,
--     _In_ COORD dwBufferCoord,
--     _Inout_ PSMALL_RECT lpReadRegion
--     );
--  -}
-- foreign import ccall "windows.h ReadConsoleOutputW" c_ReadConsoleOutputW :: HANDLE
--                                                                          -> PCHAR_INFO
--                                                                          -> {- COORD -} DWORD
--                                                                          -> {- COORD -} DWORD
--                                                                          -> PSMALL_RECT
--                                                                          -> IO BOOL

-- readConsoleOutput :: HANDLE -> COORD -> COORD -> SMALL_RECT -> IO (V.Vector CHAR_INFO, SMALL_RECT) 
-- readConsoleOutput h size pos readRegion =
--   alloca $ \pReadRegion -> do
--   poke pReadRegion readRegion
--   v <- newVectorWith $\pBuffer -> do
--     failWithFalse_ "ReadConsoleOutputW" 
  
